--- a/css/navbar.css
+++ b/css/navbar.css
@@ -9,7 +9,7 @@
 /* Navbar */
 .navbar {
     background-color: #403c5c;
-    height: 90px;
+    height: 9.2vh;
     width: 100%;
     display: flex;
     justify-content: space-between;
