--- a/css/content.css
+++ b/css/content.css
@@ -97,10 +97,10 @@
     line-height: 1.2;
 }
 
-.cont-cont{
+.cont-cont {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-
+    height: 62.4vh;
 }
