--- a/css/it.css
+++ b/css/it.css
@@ -14,6 +14,7 @@ body {
     overflow-x: hidden;
     /* Disable horizontal scrolling */
     margin: 0;
+    background-color: #FAF4ED;
 }
 
 /* Page Container */
@@ -171,6 +172,7 @@ select {
     max-width: 900px;
     overflow-x: hidden;
     /* Prevent any accidental horizontal overflow */
+    padding: 10px;
 }
 
 /* Card Styling */
@@ -178,7 +180,7 @@ select {
     width: 250px;
     height: 300px;
     border: 1px solid #CBAACB;
-    background-color: #FAF4ED;
+    background-color: #FFFFFF;
     padding: 20px;
     border-radius: 15px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
